--- a/sass/_realtors.sass
+++ b/sass/_realtors.sass
@@ -1,7 +1,6 @@
 .realtors
   background-color: $color-secondary
   grid-column: col-start 7 / full-end
-  grid-row: 1 / 2
   padding: 3rem
 
   display: grid
@@ -10,12 +9,22 @@
   grid-row-gap: 2rem
   justify-items: center
 
+  @media only screen and (max-width: $bp-medium)
+    grid-column: 1 / -1
+
   &__list
     display: grid
     grid-template-columns: min-content max-content
     grid-column-gap: 2rem
     grid-row-gap: 5vh
     align-items: center
+
+    @media only screen and (max-width: $bp-medium)
+      grid-template-columns: repeat(3, min-content max-content)
+      margin-bottom: 2.5rem
+
+    @media only screen and (max-width: $bp-small)
+      grid-template-columns: min-content max-content
   
   &__img
     width: 7rem
